Fixed layout bugs

--- a/src/app/components/navigation/BurgerMenu/TopDrawer/TopDrawer.module.scss
+++ b/src/app/components/navigation/BurgerMenu/TopDrawer/TopDrawer.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   display: none;
   width: 100%;
-  height: 30vh;
+  height: 50vh;
   background-color: #1b242f;
   color: $secondaryColor;
   border-bottom: 3px solid $secondaryColor;
