--- a/src/app/components/sections/about/AboutSection.module.scss
+++ b/src/app/components/sections/about/AboutSection.module.scss
@@ -2,7 +2,7 @@
 
 .AboutSection {
   position: relative;
-  background-color: $sectionBackgroundColorDark;
+  background-color: $sectionBackgroundColorLight;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
