--- a/src/app/components/sections/projects/ProjectsSection.module.scss
+++ b/src/app/components/sections/projects/ProjectsSection.module.scss
@@ -2,7 +2,7 @@
 
 .ProjectsSection {
   position: relative;
-  background-color: $sectionBackgroundColorLight;
+  background-color: $sectionBackgroundColorDark;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
